# Calc

./: CMakeLists.txt  README.md
QtWin/include/: QtWin.h
include/: uiCalc.h  uiCalc.ui  uiMain.h  uiMain.ui  ui_uiCalc.h  ui_uiMain.h
include/QtWin/: qtwMica.h
src/: main.cpp  uiCalc.cpp  uiMain.cpp
